# musa

./: .gitignore  Cargo.toml  Makefile  README.md  requirements.txt
backend/app/: api.py  config.py  exceptions.py  init.py  logger.py  main.py
backend/app/models/: playlist.py  track.py  user.py
backend/tests/: test_models.py
docs/: architecture.md
frontend/: index.html
src/: app.rs  config.rs  cover.rs  duration.rs  main.rs  player.rs  theme.rs  track.rs  util.rs
src/app/: anim.rs  color.rs  controls.rs  cover.rs  mod.rs  nav.rs  scanner.rs  state.rs  types.rs  update.rs  visualizer.rs
src/app/anim/: color.rs  flow.rs  mod.rs  paint.rs  state.rs  time_rng.rs
src/app/anim/paint/: cache.rs  driver.rs  field.rs  math.rs  mod.rs  render.rs  surface.rs
src/app/pages/: browser.rs  mod.rs  player.rs  playlist.rs  settings.rs
src/app/pages/settings/: footer_actions.rs  helpers.rs  mod.rs  section_bg_anim.rs  section_player.rs  section_theme.rs  section_ui.rs  section_visualizer.rs  section_window.rs
src/config/: mod.rs  player.rs  theme.rs  visualizer.rs  window.rs
src/config/anim/: mod.rs
src/config/ui/: controls.rs  mod.rs  seekbar.rs  volume.rs
src/player/: device.rs  engine.rs  io.rs  mod.rs  playback.rs  tap.rs  vis.rs
src/theme/: color.rs  mod.rs  palette.rs  ui.rs
src/ui/: widgets.rs
src/ui/widgets/: buttons.rs  mod.rs
src/ui/widgets/icons/: mod.rs  next.rs  pause.rs  play.rs  prev.rs  repeat.rs  shuffle.rs
src/ui/widgets/sliders/: mod.rs  seekbar.rs  volume.rs
src/util/: fs.rs  mod.rs  path_heur.rs  tags.rs  text.rs  timefmt.rs  track_meta.rs
