[package]
name = "musa"
version = "0.1.0"
edition = "2021"

[features]
default = ["glow"]
glow = ["eframe/glow"]
wgpu = ["eframe/wgpu"]

[dependencies]
regex = "1"
anyhow = "1"
rand = "0.8"
egui = "0.27"
walkdir = "2"
image = "0.25"
rand_pcg = "0.3"
audiotags = "0.5"
rodio = { version = "0.17", features = ["symphonia-all"] }
eframe = { version = "0.27", default-features = false, features = ["glow"] }

symphonia = { version = "0.5", features = [
  "aac", "alac", "flac", "vorbis", "mp3", "isomp4",
  "ogg", "wav", "pcm", "mkv"
] }
