[package]
name = "musa"
version = "0.1.0"
edition = "2021"

[features]
default = ["glow"]
glow = ["eframe/glow"]
wgpu = ["eframe/wgpu"]

[dependencies]
toml = "0.8"
regex = "1"
anyhow = "1"
fastrand = "2"
audiotags = "0.5"
directories = "5"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
eframe = { version = "0.27", default-features = false }
rodio = { version = "0.17", default-features = false, features = ["symphonia"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
egui = { version = "0.27", default-features = false, features = ["default_fonts"] }

symphonia = { version = "0.5", default-features = false, features = [
  "flac", "isomp4", "vorbis", "mp3", "ogg", "wav", "pcm"
] }
